--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="wrapper">
         <div class="container">
-            <div class="heading">My Gallary</div>
+            <div class="heading">My Gallery</div>
             <div class="gallary">
                 <div class="photo p1">
                     <img src="./assets/image1.jpg" alt="">
