--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="wrapper">
         <div class="container">
             <div class="heading">My Gallery</div>
-            <div class="gallary">
+            <div class="gallery">
                 <div class="photo p1">
                     <img src="./assets/image1.jpg" alt="">
                     <div class="caption"><p>Image 1</p></div>
